Add privacy policy
Add privacy policy

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <h2>📧 İletişim</h2>
                 <div class="contact-box">
                     <p>Gizlilik politikamız hakkında sorularınız için:</p>
-                    <p><a href="mailto:support@misil-app.com">support@misil-app.com</a></p>
+                    <p><a href="sleepyappinfo@gmail.com">sleepyappinfo@gmail.com</a></p>
                 </div>
             </div>
             
@@ -326,7 +326,7 @@
                 <h2>📧 Contact</h2>
                 <div class="contact-box">
                     <p>For questions about our privacy policy:</p>
-                    <p><a href="mailto:support@lullanest-app.com">support@lullanest-app.com</a></p>
+                    <p><a href="mailto:sleepyappinfo@gmail.com">sleepyappinfo@gmail.com</a></p>
                 </div>
             </div>
             
