--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         <h2>9. İletişim</h2>
         <p>Eğer bu politika ile ilgili sorularınız varsa bizimle iletişime geçebilirsiniz:</p>
         <p>
-            <a href="mailto:babyappdev@gmail.com">babyappdev@gmail.com</a>
+            <a href="mailto:sleepyappinfo@gmail.com">sleepyappinfo@gmail.com</a>
         </p>
 
         <div class="footer">
-            <p>© 2025 Mışıl / BabyAppDev – Tüm hakları saklıdır.</p>
+            <p>© 2025 Mışıl / SleepyApp – Tüm hakları saklıdır.</p>
             <p>🌙 Huzurlu uykular dileriz.</p>
         </div>
     </div>
